--- a/src/main/resources/static/noticias-form.html
+++ b/src/main/resources/static/noticias-form.html
@@ -2,12 +2,21 @@
   <div class="form-group">
     <label for="inputTitulo">Título</label>
     <input type="text" class="form-control" id="inputTitulo" placeholder="Titulo" 
-    	ng-model="noticia.titulo">
+    		ng-model="noticia.titulo">
   </div>
   <div class="form-group">
     <label for="inputTexto">Texto</label>
     <textarea class="form-control" id="inputText" placeholder="Texto" 
-    	ng-model="noticia.texto"></textarea>
+    		ng-model="noticia.texto"></textarea>
   </div>
+  <div class="form-group">
+    <label>Categoria</label>
+    <select class="form-control" 
+    		ng-options="categoria.nome for categoria in categorias track by categoria.id"
+    		ng-model="noticia.categoria"
+    		convert-to-number
+    >
+    </select>
+  </div>  
   <button class="btn btn-primary" ng-click="save()">Salvar</button>
 </form>
