--- a/src/main/resources/static/noticias-show.html
+++ b/src/main/resources/static/noticias-show.html
@@ -6,5 +6,9 @@
     <label>Texto</label>
     {{noticia.texto}}
   </div>
+  <div class="form-group">
+    <label>Categoria</label>
+    {{noticia.categoria.nome}}
+  </div>  
   <a href="#noticias/{{noticia.id}}/edit" class="btn btn-default">Editar</a>
   <button class="btn btn-danger" ng-click="remove()">Excluir</button>
