--- a/src/main/resources/static/noticias-form.html
+++ b/src/main/resources/static/noticias-form.html
@@ -17,6 +17,18 @@
     		convert-to-number>
     </select>
   </div>  
+  
+  <div class="form-group">
+    <label>Tags</label>
+	<picklist size="20" data-picklist="" 
+		data-pick-model="noticia.tags" 
+		data-pick-options="tag.nome for tag in tags track by tag.id"
+		convert-to-number>
+	</picklist>
+  </div>    
+  
+  
+  
   <button class="btn btn-primary" ng-click="save()">Salvar</button>
 </form>
 
