--- a/src/main/resources/static/noticias-show.html
+++ b/src/main/resources/static/noticias-show.html
@@ -10,5 +10,15 @@
     <label>Categoria</label>
     {{noticia.categoria.nome}}
   </div>  
+  
+  <div class="form-group">
+    <label>Tags</label>
+    <ul>
+    	<li ng-repeat="tag in noticia.tags">
+    		{{tag.nome}}
+    	</li>
+    </ul>
+  </div>    
+  
   <a href="#noticias/{{noticia.id}}/edit" class="btn btn-default">Editar</a>
   <button class="btn btn-danger" ng-click="remove()">Excluir</button>
