--- a/src/main/resources/static/noticias-list.html
+++ b/src/main/resources/static/noticias-list.html
@@ -15,4 +15,9 @@
   	<small>{{noticia.texto}}</small>
   </a>
 </div>
+
+<div class="alert alert-warning" role="alert" ng-show="noticias.length==0">
+  <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
+  Nenhuma notícia encontrada!
+</div>
 <a href="#noticias/new" class="btn btn-default">Nova</a>  
