--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -27,7 +27,8 @@
     <script src="js/picklist.js"></script>	
         
 	<script src="js/app.js"></script>
-	<script src="js/app-services.js"></script>   
+	<script src="js/app-services.js"></script>
+	<script src="js/app-login.js"></script>   
 	     
 	<script src="js/app-noticias.js"></script>  
 	<script src="js/app-livros.js"></script>    
