--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -53,6 +53,9 @@
             <li><a href="#/noticias">Notícias</a></li>
             <li><a href="#/livros">Livros</a></li>
           </ul>
+		  <ul class="nav navbar-nav navbar-right">
+		  	<li><a href="/logout">Sair</a></li>
+		  </ul>          
         </div><!-- /.nav-collapse -->
       </div><!-- /.container -->
     </nav><!-- /.navbar -->
