--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -32,15 +32,11 @@
 
 
     <div class="container" ng-controller="LoginController">
-
-      <div class="row row-offcanvas row-offcanvas-right" ng-view>
-
+      <div class="row row-offcanvas row-offcanvas-right">
 		<h1>Login</h1>
-		
 		<div class="alert alert-warning" role="alert" ng-show="message">
 			{{message}}
 		</div>
-		
 		<form>
 			<div class="form-group">
 				<label for="inputEmail">E-mail</label> 
@@ -48,18 +44,14 @@
 					class="form-control" id="inputEmail" placeholder="E-mail"
 					ng-model="email">
 			</div>
-			
 			<div class="form-group">
 				<label for="inputSenha">Senha</label> 
 				<input type="password"
 					class="form-control" id="inputSenha" placeholder="Senha"
 					ng-model="senha">
 			</div>	
-		
 			<button class="btn btn-primary" ng-click="entrar()">Entrar</button>  
 		</form>
-
-
       </div>
 
       <hr>
