--- a/src/main/resources/static/app/noticias-show.html
+++ b/src/main/resources/static/app/noticias-show.html
@@ -16,6 +16,18 @@
   </div>    
   
   <div class="form-group">
+    <label>Imagem</label>
+
+	<div class="button" ngf-select="upload($file)">Enviar nova imagem</div>
+	<img ng-src="/api/noticias/imagens?src={{noticia.imagem}}"
+		 ng-show="noticia.imagem"
+		 style="width: 200px"/>
+  </div>  
+  
+  
+  
+  
+  <div class="form-group">
     <label>Tags</label>
     <ul>
     	<li ng-repeat="tag in noticia.tags">
